# luna-vm

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  TODO.md
.github/workflows/: build.yml
cmake/: common.cmake
docs/: Convention.md  Style.md
src/: CMakeLists.txt
src/CLI/: CMakeLists.txt  JavaMain.cpp
src/Common/: Byteswap.h  Macros.h  Types.h
src/Core/: BytecodeStream.cpp  BytecodeStream.h  CMakeLists.txt  ClassFile.h  ClassLoader.cpp  ClassLoader.h  FileSystem.cpp  FileSystem.h
src/Foundation/: CMakeLists.txt  FileSystem.cpp  FileSystem.h  GenericFileSystem.h  JarFileSystem.h  OSFile.h  OSGenericFile.h  OSGenericInterface.h  OSPosixFile.cpp  OSPosixFile.h
src/Foundation/Platform/: PosixFileSystem.cpp  PosixFileSystem.h
src/Log/: CMakeLists.txt  Log.cpp  Log.h
src/VM/: CMakeLists.txt  ClassFile.h  ClassLoader.cpp
